# openBaseball

./: .gitmodules  CMakeLists.txt  README.md
docs/: building.rst  design_doc.rst  roadmap.rst
src/: main.cpp  obb_utils.cpp  obb_utils.hpp
